Edited landing.select_action_report.report_row, form.widgets.date, build.widgets.widget_utilities, landing.settings, build.widgets.markdown, reports.widgets, reports.widgets.widget_utilities.markdown_display, utilities.augment, build.widgets.widget_utilities.markdown_display, start_up, utilities, app config, reports.widgets.toolbar, form.widgets.widget_utilities, build.widgets.check_box, form.widgets.radio_button, reports.widgets.widget_utilities.vega_lite, reports, form.widgets.drop_down, form, form.main, form.widgets.markdown, reports.widgets.widget_utilities, reports.main, build.widgets.section, build.widgets, build.widgets.text_area, reports.widgets.section, server_surveys, landing.settings.ColorChanger, form.widgets.text_area, build.main, landing.main, build, form.widgets.section, form.widgets, build.widgets.slider, landing.select_action_survey.survey_row, landing.select_action_survey, utilities.hr, landing.copy_link, build.widgets.drop_down, build.widgets.radio_button, reports.widgets.markdown, build.branch, reports.widgets.chart, build.branch.confirm_content, form.widgets.slider, form.widgets.widget_utilities.slider_custom, landing.select_action_report, build.widgets.text_box, landing, reports.widgets.widget_utilities.json, form.widgets.html_display, form.thank_you_msg, form.widgets.text_box, form.widgets.check_box, landing.settings.survey_settings, build.widgets.toolbar, server_reports, landing.settings.report_settings and build.widgets.date

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -3,10 +3,17 @@ services:
   client_config: {}
   server_config: {auto_create_missing_columns: false}
 - source: /runtime/services/anvil/users.yml
-  client_config: {allow_signup: false, enable_automatically: false, use_email: true,
-    confirm_email: false, use_microsoft: true, require_secure_passwords: true}
+  client_config: {use_microsoft: true, require_secure_passwords: true, use_token: false,
+    use_saml: false, use_email: true, allow_signup: false, enable_automatically: false,
+    confirm_email: false, use_google: false, use_facebook: false}
   server_config: {user_table: users}
 - source: /runtime/services/anvil/microsoft.yml
+  client_config: {}
+  server_config: {}
+- source: /runtime/services/google.yml
+  client_config: {}
+  server_config: {}
+- source: /runtime/services/facebook.yml
   client_config: {}
   server_config: {}
 startup: {type: module, module: start_up}
