--- a/client_code/landing/select_action_survey/survey_row/form_template.yaml
+++ b/client_code/landing/select_action_survey/survey_row/form_template.yaml
@@ -39,4 +39,12 @@ components:
   name: button_1
   layout_properties: {column: PLVZBJ}
   event_bindings: {click: settings_click}
+- type: Button
+  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:area-chart'}
+  name: button_chart
+  layout_properties: {column: PDNOBP}
+  event_bindings: {click: button_chart_click}
 is_package: true
