--- a/client_code/reports/main/form_template.yaml
+++ b/client_code/reports/main/form_template.yaml
@@ -28,6 +28,14 @@ components:
     event_bindings: {click: link_download_click}
     components: []
   - type: Link
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:info-circle'}
+    name: link_info
+    layout_properties: {}
+    event_bindings: {click: link_info_click}
+  - type: Link
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
       visible: false, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
