Edited reports.widgets.widget_utilities.gen_chart_params and reports.widgets.chart

--- a/client_code/reports/widgets/widget_utilities/gen_chart_params/form_template.yaml
+++ b/client_code/reports/widgets/widget_utilities/gen_chart_params/form_template.yaml
@@ -1,6 +1,7 @@
 container:
   type: ColumnPanel
   properties: {col_widths: '{}'}
+  event_bindings: {show: form_show}
 components:
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
@@ -13,6 +14,7 @@ components:
   properties: {}
   name: drop_down_dataset
   layout_properties: {grid_position: 'TTMLDD,WNUAYR'}
+  event_bindings: {change: drop_down_dataset_change}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: Select one or more columns to visualize, font_size: null, font: '', spacing_above: small,
@@ -21,12 +23,38 @@ components:
   name: label_columns
   layout_properties: {grid_position: 'QEZBXR,RNAAGQ'}
 - type: DropDown
-  properties: {}
+  properties:
+    role: null
+    align: full
+    tooltip: ''
+    placeholder: ''
+    border: ''
+    enabled: true
+    foreground: ''
+    items: []
+    visible: true
+    font_size: null
+    font: ''
+    spacing_above: small
+    spacing_below: small
+    italic: false
+    background: ''
+    bold: false
+    underline: false
+    include_placeholder: true
   name: drop_down_columns
   layout_properties: {grid_position: 'CIVYHX,VHFXCE'}
+  event_bindings: {change: drop_down_columns_change}
 - type: FlowPanel
   properties: {role: null, spacing: none, align: left, tooltip: '', border: '', foreground: '',
     visible: true, spacing_above: small, spacing_below: small, background: ''}
   name: flow_panel_columns
   layout_properties: {grid_position: 'FSTHJI,XRWJEN'}
+- type: Button
+  properties: {role: primary-color, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: primary_color_1, font_size: null, font: '',
+    spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
+    bold: false, underline: false, icon: 'fa:times-circle'}
+  name: primary_color_1
+  layout_properties: {grid_position: 'OSBWAX,SWFIQF'}
 is_package: true
