Edited reports.widgets.chart and reports.widgets.widget_utilities.json

--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -20,7 +20,7 @@ components:
     grid_position: SMMSJS,GPUNUV
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"ZIVSYL":45,"YDRBLJ":15}',
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"ZIVSYL":30}',
     spacing_below: small, background: ''}
   name: column_panel_outer_container
   layout_properties: {grid_position: 'XVDYNZ,BTKJHC'}
@@ -47,27 +47,21 @@ components:
       name: button_save_template
       layout_properties: {grid_position: 'FGKOMX,AMEAWS'}
       event_bindings: {click: button_save_template_click}
-  - type: FlowPanel
-    properties: {role: null, spacing: none, align: right, tooltip: '', border: '',
-      foreground: '', visible: true, spacing_above: none, spacing_below: none, background: ''}
-    name: flow_panel_1
-    layout_properties: {grid_position: 'IABPFV,YDRBLJ'}
-    components:
     - type: Button
       properties: {role: primary-color, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: none,
+        foreground: '', visible: false, text: '', font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
         underline: false, icon: 'fa:arrow-circle-left'}
       name: button_left
-      layout_properties: {grid_position: 'ZLPEBM,JLVBFN'}
+      layout_properties: {}
       event_bindings: {click: button_nav_click}
     - type: Button
       properties: {role: primary-color, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: none,
+        foreground: '', visible: false, text: '', font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
         underline: false, icon: 'fa:arrow-circle-right'}
       name: button_right
-      layout_properties: {}
+      layout_properties: {grid_position: 'IABPFV,EZAVPG'}
       event_bindings: {click: button_nav_click}
     event_bindings: {}
   - type: ColumnPanel
