--- a/client_code/reports/widgets/widget_utilities/vega_lite/form_template.yaml
+++ b/client_code/reports/widgets/widget_utilities/vega_lite/form_template.yaml
@@ -9,8 +9,8 @@ container:
       \ $(this).find(\".vis\")[0];\n    vegaEmbed(visElt, spec, opts)\n  }\n  \n//\
       \ generate a static PNG image\nfunction get_vega_png(){\n  \n\t//var view =\
       \ new vega.View(vega.parse(spec), {renderer: 'none'});\n\tvar view = $(this).find(\"\
-      .vis\")[0];\n  \n\tview.toCanvas()\n  \t\t.then(function(canvas) {\n    \t//\
-      \ process node-canvas instance\n    \t// for example, generate a PNG stream\
+      .vis\")[0].View;\n  \n\tview.toCanvas()\n  \t\t.then(function(canvas) {\n  \
+      \  \t// process node-canvas instance\n    \t// for example, generate a PNG stream\
       \ to write\n    \tvar stream = canvas.createPNGStream();\n  \t\t})\n  \t\t.catch(function(err)\
       \ { console.error(err); });\n}\n</script>\n\n\n\n<style>\n  /*\n  .vis {\n \
       \   resize: both;\n    overflow: auto;\n  }\n  */\n\n</style>"}
