Created reports.widgets.widget_utilities.data_info_view_old; Edited server_reports and reports.widgets.widget_utilities.data_info_view

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -18,11 +18,12 @@ unique_ids:
     reports.widgets.widget_utilities.gen_chart_params: BNPM6IFXL6KGI2RP6COZCIXEH6QIFNYA,
     reports.widgets.chart: CAG5LN3HJBZAPHPESDCV5LOH6GZXRKQS, build.branch.confirm_content: XIDJNFXI5MNP6OKHGKJDXPHCUPUY3WLM,
     form.widgets.slider: NTXNQXWL6X5QRPYBBNRN62Q652FZZ6LB, form.widgets.widget_utilities.slider_custom: FBZ5QGYBOA42FHMCSUA4HLKZSBL2L2FT,
-    landing.select_action_report: W74XM7L3XZLT7HFMJMYXPAPFKY4XDDCK, build.widgets.text_box: PXBTHNN32CXFAXIPC2XX3HFEUK4APSQG,
-    reports.widgets.widget_utilities.json: 2UGB6VYJ4XY3YOCXANDIT5KXGYDNZG7E, form.widgets.html_display: 3EALUEBOGB4BT6UW6F42XV4PIXW5HAVA,
-    form.thank_you_msg: 7M55BNOGOZ5EDYVBZKRITBGBPLY3V67K, form.widgets.text_box: MMAGKPRCUWMQKGAAR7MTFJPJPPVELXBN,
-    form.widgets.check_box: ZSGR7DG7WZNYEJQ4SX4YUPBYWRITP4LS, landing.settings.survey_settings: M2CM7UCPT3GJAW33BAWYYTWVAM3M46D5,
-    build.widgets.toolbar: ISOFURDP6Q5FZNXDTDFJ3F7H6EQLNH6C, reports.widgets.widget_utilities.data_info_view: 2RSWE6O5SEKYQTLQ4IYGIHAQV7MFSLGG,
+    landing.select_action_report: W74XM7L3XZLT7HFMJMYXPAPFKY4XDDCK, reports.widgets.widget_utilities.data_info_view_old: 2RSWE6O5SEKYQTLQ4IYGIHAQV7MFSLGG,
+    build.widgets.text_box: PXBTHNN32CXFAXIPC2XX3HFEUK4APSQG, reports.widgets.widget_utilities.json: 2UGB6VYJ4XY3YOCXANDIT5KXGYDNZG7E,
+    form.widgets.html_display: 3EALUEBOGB4BT6UW6F42XV4PIXW5HAVA, form.thank_you_msg: 7M55BNOGOZ5EDYVBZKRITBGBPLY3V67K,
+    form.widgets.text_box: MMAGKPRCUWMQKGAAR7MTFJPJPPVELXBN, form.widgets.check_box: ZSGR7DG7WZNYEJQ4SX4YUPBYWRITP4LS,
+    landing.settings.survey_settings: M2CM7UCPT3GJAW33BAWYYTWVAM3M46D5, build.widgets.toolbar: ISOFURDP6Q5FZNXDTDFJ3F7H6EQLNH6C,
+    reports.widgets.widget_utilities.data_info_view: EFCV3ZNP5M6M67WZ2T2INZMZU7QL64LH,
     landing.settings.report_settings: ELRSUXEDSGSN44SFCPHWNEFBMOYSSMQ6, build.widgets.date: YWDYSQDW6KXU6EGVPUF2SDLV6SA55K3L}
   modules: {build.widgets.widget_utilities: XZ5TCIXTRF3HKTGJMJNUV4JVDHKOXK3Z, landing.settings: TEGSALPKJDY62VKFI5W3CIPI5FTO3HSG,
     reports.widgets: PWE7LGOMJLAZ6QV65SHWNKYVT7TIJSSS, utilities.augment: GDMKGB5ZY2HI7MGVTBCNMEWKQCD4EO7X,
