--- a/client_code/reports/widgets/widget_utilities/data_info_view/form_template.yaml
+++ b/client_code/reports/widgets/widget_utilities/data_info_view/form_template.yaml
@@ -1,9 +1,6 @@
 container:
-  type: ColumnPanel
-  properties: {col_widths: '{}'}
-components:
-- type: form:reports.widgets.widget_utilities.markdown_display
-  properties: {}
-  name: markdown_display
-  layout_properties: {grid_position: 'GKTJMY,WOXWBN'}
+  type: HtmlTemplate
+  properties: {html: "<center style=\"font-style:italic; color:#888; margin: 3em;\"\
+      >\n  (Insert your custom HTML here)\n</center>"}
+components: []
 is_package: true
