Created reports.edit_templates; Edited settings, reports.widgets.widget_utilities.vega_lite, reports.main, reports.widgets.chart and server_reports

--- a/client_code/reports/main/form_template.yaml
+++ b/client_code/reports/main/form_template.yaml
@@ -36,6 +36,15 @@ components:
     layout_properties: {}
     event_bindings: {click: link_info_click}
   - type: Link
+    properties: {role: null, url: '', align: left, tooltip: edit templates, border: '',
+      foreground: '', visible: true, text: '{ }', font_size: null, wrap_on: mobile,
+      font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
+    name: link_templates
+    layout_properties: {}
+    event_bindings: {click: link_templates_click}
+  - type: Link
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
       visible: false, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
