--- a/anvil.yaml
+++ b/anvil.yaml
@@ -174,6 +174,10 @@ db_schema:
       name: templates
       type: simpleObject
       admin_ui: {order: 1, width: 200}
+    MF4kJFuGG6k=:
+      name: images
+      type: media
+      admin_ui: {order: 1, width: 200}
   access: {python_name: chart_templates, app_id: RZCX3HWGWWPZJCOH, server: full, client: none,
     table_mapping_name: null, table_mapping_id: null, table_id: 107442}
 renamed: true
