Created reports.edit_templates.edit_templates_templ and reports.widgets.widget_utilities.read_only_json; Edited reports.widgets.widget_utilities.vega_lite, reports.main, reports.edit_templates and reports.widgets.chart

--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -71,6 +71,7 @@ components:
     name: column_panel_json_container
     layout_properties: {grid_position: 'ZQIIUP,RBZLBY'}
     components: []
+    event_bindings: {}
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
@@ -79,8 +80,4 @@ components:
     layout_properties: {grid_position: 'ZQIIUP,GDZHZL'}
     components: []
   event_bindings: {}
-- type: Image
-  properties: {}
-  name: image_1
-  layout_properties: {grid_position: 'JGSGCT,EWTZRW'}
 is_package: true
