--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -7,8 +7,9 @@ unique_ids:
     form.widgets.radio_button: BWN4CJ7VVZ3O2BHPAYNHCVIQH6UIBSIV, reports.widgets.widget_utilities.vega_lite: 5ZJ7XFZDI4UX6Q4DFT6IMY77JA4YVLID,
     form.widgets.drop_down: QJC7F4I75NMX7JEVF67DMEIZWQLYOPMG, form.main: GE2VPJW5WMALLJHE4KPPYN7XQENAYGJT,
     form.widgets.markdown: 7PJP4OBPVFWXSHAR4NFHIFSFWF4AE7ES, reports.main: 4WXPSTTNU2W2LG5TSW4YK5FGGCFTKFUY,
-    build.widgets.section: GJEERO26R74M4I3W4FKATOB5NTGOQO3F, build.widgets.text_area: 4M34LRJDBJRC5EGHXWNI5XEZADFIEWUN,
-    reports.widgets.section: GJTDKQO344ZZ5KQOEI4J3JBQ5IJA4FGI, form.widgets.text_area: WHF36O772DU4LOXLWEUZ2PIUGL6HTHWS,
+    build.widgets.section: GJEERO26R74M4I3W4FKATOB5NTGOQO3F, reports.edit_templates.edit_templates_templ: R4NPVPMFX34TQDCYZQUP5JRYL3OQCGAC,
+    build.widgets.text_area: 4M34LRJDBJRC5EGHXWNI5XEZADFIEWUN, reports.widgets.section: GJTDKQO344ZZ5KQOEI4J3JBQ5IJA4FGI,
+    form.widgets.text_area: WHF36O772DU4LOXLWEUZ2PIUGL6HTHWS, reports.widgets.widget_utilities.read_only_json: 6FAL4IGCIVCTPK6BU3FTU2OVB6YD2DOR,
     form.widgets.check_box.check_box_other: 2UVSINP5E7OPWHHQKD5RDXKDM2DAVXU5, build.main: UJGJQEWYJAYQMZUIKL6JHDCII3QRURHU,
     landing.main: IU7UUK6I6LF74JD4CHRC4RQWVBHJVRNI, form.widgets.section: JU45GZITMUQJ4T3VE6OIZ2HQL47EQFPQ,
     reports.edit_templates: 3T3NXPF3PB2LF4USW2BQR5AGOZSX76O5, build.widgets.slider: UNJRXDDO6YVVUKMA6VGZPCJ2MKRS47DN,
