--- a/client_code/reports/edit_templates/form_template.yaml
+++ b/client_code/reports/edit_templates/form_template.yaml
@@ -3,9 +3,49 @@ container:
   event_bindings: {}
   properties: {col_widths: '{}'}
 components:
-- type: Image
-  properties: {}
-  name: image_1
-  layout_properties: {grid_position: 'STWLUU,PMSZST'}
+- type: DataGrid
+  properties:
+    role: null
+    columns:
+    - {id: TKMIQV, title: Column 1, data_key: column_1, expand: false, width: 549}
+    - {id: TSLYYZ, title: Column 2, data_key: column_2, expand: false, width: 333}
+    - {id: ZQSZHF, title: Column 3, data_key: column_3}
+    auto_header: false
+    tooltip: ''
+    border: ''
+    foreground: ''
+    rows_per_page: 100
+    visible: true
+    show_page_controls: true
+    spacing_above: small
+    spacing_below: small
+    background: ''
+  name: data_grid_1
+  layout_properties: {grid_position: 'XURBZW,FVWINQ', full_width_row: false}
+  components:
+  - type: DataRowPanel
+    properties: {}
+    name: data_row_panel_1
+    layout_properties: {}
+    components:
+    - type: Label
+      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+        visible: true, text: vega-lite spec, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+        underline: false, icon: ''}
+      name: label_1
+      layout_properties: {column: TKMIQV}
+      event_bindings: {}
+    - type: Label
+      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+        visible: true, text: chart exemplar, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+        underline: false, icon: ''}
+      name: label_2
+      layout_properties: {column: TSLYYZ}
+  - type: RepeatingPanel
+    properties: {spacing_above: none, spacing_below: none, item_template: reports.edit_templates.edit_templates_templ}
+    name: repeating_panel_1
+    layout_properties: {}
   event_bindings: {}
 is_package: true
