Created reports.edit_templatesUNUSED; Edited reports.main, reports.edit_templates.edit_templates_templ and reports.edit_templates

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -7,16 +7,17 @@ unique_ids:
     form.widgets.radio_button: BWN4CJ7VVZ3O2BHPAYNHCVIQH6UIBSIV, reports.widgets.widget_utilities.vega_lite: 5ZJ7XFZDI4UX6Q4DFT6IMY77JA4YVLID,
     form.widgets.drop_down: QJC7F4I75NMX7JEVF67DMEIZWQLYOPMG, form.main: GE2VPJW5WMALLJHE4KPPYN7XQENAYGJT,
     form.widgets.markdown: 7PJP4OBPVFWXSHAR4NFHIFSFWF4AE7ES, reports.main: 4WXPSTTNU2W2LG5TSW4YK5FGGCFTKFUY,
-    build.widgets.section: GJEERO26R74M4I3W4FKATOB5NTGOQO3F, reports.edit_templates.edit_templates_templ: R4NPVPMFX34TQDCYZQUP5JRYL3OQCGAC,
+    build.widgets.section: GJEERO26R74M4I3W4FKATOB5NTGOQO3F, reports.edit_templates.edit_templates_templ: WHUTYOVQG44ZJN5BIWZ3KEVGRYK7SQE2,
     build.widgets.text_area: 4M34LRJDBJRC5EGHXWNI5XEZADFIEWUN, reports.widgets.section: GJTDKQO344ZZ5KQOEI4J3JBQ5IJA4FGI,
-    form.widgets.text_area: WHF36O772DU4LOXLWEUZ2PIUGL6HTHWS, reports.widgets.widget_utilities.read_only_json: 6FAL4IGCIVCTPK6BU3FTU2OVB6YD2DOR,
+    form.widgets.text_area: WHF36O772DU4LOXLWEUZ2PIUGL6HTHWS, reports.widgets.widget_utilities.read_only_json: SZ5VH3RZW5XXIDATHAOVEIBUTIQWEJRU,
     form.widgets.check_box.check_box_other: 2UVSINP5E7OPWHHQKD5RDXKDM2DAVXU5, build.main: UJGJQEWYJAYQMZUIKL6JHDCII3QRURHU,
-    landing.main: IU7UUK6I6LF74JD4CHRC4RQWVBHJVRNI, form.widgets.section: JU45GZITMUQJ4T3VE6OIZ2HQL47EQFPQ,
-    reports.edit_templates: 3T3NXPF3PB2LF4USW2BQR5AGOZSX76O5, build.widgets.slider: UNJRXDDO6YVVUKMA6VGZPCJ2MKRS47DN,
-    landing.select_action_survey.survey_row: DYQ2UV7UO2FZ5723BFVYJSLNSLEEZTIY, landing.select_action_survey: YWMES4G6WTGISZPUFCBAE55UGTEJF3U4,
-    utilities.hr: EQ7PSKTYCTYRVE5FLXIJPPI56R2NLKOZ, landing.copy_link: TEWZ4B4EOQU4FKV3KO3Y7FMDLUAOTJNK,
-    build.widgets.drop_down: RKWHKZBTSKNMZNHFRBD5TRHHBEYJUTAD, build.widgets.radio_button: ADA4HYYRH7YPYP5EBOC2OS2CSUM4ZXEW,
-    reports.widgets.markdown: R33NSEVCQZMRPJGYXX4AHCMFIOA2DN3C, reports.widgets.widget_utilities.gen_chart_params: BNPM6IFXL6KGI2RP6COZCIXEH6QIFNYA,
+    landing.main: IU7UUK6I6LF74JD4CHRC4RQWVBHJVRNI, reports.edit_templatesUNUSED: 3T3NXPF3PB2LF4USW2BQR5AGOZSX76O5,
+    form.widgets.section: JU45GZITMUQJ4T3VE6OIZ2HQL47EQFPQ, reports.edit_templates: 23JLF4MWZYPZVLLLRS5I7IYO7PZQHX67,
+    build.widgets.slider: UNJRXDDO6YVVUKMA6VGZPCJ2MKRS47DN, landing.select_action_survey.survey_row: DYQ2UV7UO2FZ5723BFVYJSLNSLEEZTIY,
+    landing.select_action_survey: YWMES4G6WTGISZPUFCBAE55UGTEJF3U4, utilities.hr: EQ7PSKTYCTYRVE5FLXIJPPI56R2NLKOZ,
+    landing.copy_link: TEWZ4B4EOQU4FKV3KO3Y7FMDLUAOTJNK, build.widgets.drop_down: RKWHKZBTSKNMZNHFRBD5TRHHBEYJUTAD,
+    build.widgets.radio_button: ADA4HYYRH7YPYP5EBOC2OS2CSUM4ZXEW, reports.widgets.markdown: R33NSEVCQZMRPJGYXX4AHCMFIOA2DN3C,
+    reports.widgets.widget_utilities.gen_chart_params: BNPM6IFXL6KGI2RP6COZCIXEH6QIFNYA,
     reports.widgets.chart: CAG5LN3HJBZAPHPESDCV5LOH6GZXRKQS, build.branch.confirm_content: XIDJNFXI5MNP6OKHGKJDXPHCUPUY3WLM,
     form.widgets.slider: NTXNQXWL6X5QRPYBBNRN62Q652FZZ6LB, form.widgets.widget_utilities.slider_custom: FBZ5QGYBOA42FHMCSUA4HLKZSBL2L2FT,
     landing.select_action_report: W74XM7L3XZLT7HFMJMYXPAPFKY4XDDCK, reports.widgets.widget_utilities.data_info_view_old: 2RSWE6O5SEKYQTLQ4IYGIHAQV7MFSLGG,
